fabric/cluster/lab/bootie/tailnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-bootie-tailnet
  namespace: lab
  labels:
    app.kubernetes.io/name: lab-bootie-tailnet
    app.kubernetes.io/part-of: lab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lab-bootie-tailnet
  template:
    metadata:
      annotations:
        rollout.samcday.com/auth-generation: "2"
      labels:
        app.kubernetes.io/name: lab-bootie-tailnet
        app.kubernetes.io/part-of: lab
    spec:
      automountServiceAccountToken: true
      enableServiceLinks: false
      serviceAccountName: lab-bootie-tailnet
      priorityClassName: system-cluster-critical
      terminationGracePeriodSeconds: 60
      nodeSelector:
        fabric.samcday.com/platform: "true"
        kubernetes.io/os: linux
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - fabric-az1-svc1
                      - fabric-az1-svc2
      tolerations:
        - effect: NoSchedule
          key: fabric.samcday.com/platform
          operator: Equal
          value: "true"
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:v1.86.5@sha256:9e2bfdd9e2ce724df53f976d06a4a9933aa730dc655ace42798f4c73735d1cac
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9002
              name: health
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: health
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /config
              name: serve-config
              readOnly: true
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run/tailscale
              name: run
      volumes:
        - configMap:
            name: lab-bootie-ts-serve-config
          name: serve-config
        - emptyDir:
            medium: Memory
            sizeLimit: 16Mi
          name: run
        - emptyDir:
            medium: Memory
            sizeLimit: 16Mi
          name: tmp
