fabric/cluster/lab/bootie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-bootie
  namespace: lab
  labels:
    app.kubernetes.io/name: lab-bootie
    app.kubernetes.io/part-of: lab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lab-bootie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lab-bootie
        app.kubernetes.io/part-of: lab
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      priorityClassName: system-cluster-critical
      nodeSelector:
        fabric.samcday.com/platform: "true"
        kubernetes.io/os: linux
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - fabric-az1-svc1
                      - fabric-az1-svc2
      tolerations:
        - effect: NoSchedule
          key: fabric.samcday.com/platform
          operator: Equal
          value: "true"
      terminationGracePeriodSeconds: 15
      containers:
        - name: bootie
          image: ghcr.io/samcday/infra-bootie@sha256:5fa800c4cfa221facd9ffcc51b5fa0bcc12a8f0fb81622a862e91cb63b6f264f
          imagePullPolicy: IfNotPresent
          command:
            - /bin/bash
            - -ceu
          args:
            - install -d -m 0755 /run/nginx; exec /bin/run
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /static/healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /static/healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              cpu: "1"
              memory: 384Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - CHOWN
                - DAC_OVERRIDE
                - NET_BIND_SERVICE
                - SETGID
                - SETUID
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: false
            runAsUser: 0
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /config/install-policy
              name: install-policy
              readOnly: true
              subPath: install-policy
            - mountPath: /ignition
              name: ignition
              readOnly: true
            - mountPath: /kubeconfig
              name: kubeconfig
              readOnly: true
            - mountPath: /pxe/healthz
              name: health
              readOnly: true
              subPath: healthz
            - mountPath: /run
              name: run
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/lib/nginx/logs
              name: nginx-log
            - mountPath: /var/lib/nginx/tmp
              name: nginx-cache
      volumes:
        - name: butane-common
          secret:
            secretName: butane-common
        - name: butane-lab
          secret:
            secretName: lab-butane
        - name: ca-hash
          configMap:
            name: ca-hash
        - name: compile-tmp
          emptyDir:
            medium: Memory
            sizeLimit: 16Mi
        - name: ignition
          emptyDir:
            medium: Memory
            sizeLimit: 32Mi
        - name: health
          configMap:
            name: lab-bootie-health
        - name: install-policy
          configMap:
            name: lab-bootie-install-policy
        - name: kubeadm-bootstrap
          secret:
            secretName: lab-kubeadm-bootstrap
        - name: kubeconfig
          secret:
            secretName: lab-bootie-kubeconfig
        - name: node-auth
          secret:
            secretName: lab-node-ts-auth
        - name: nginx-cache
          emptyDir:
            medium: Memory
            sizeLimit: 16Mi
        - name: nginx-log
          emptyDir:
            medium: Memory
            sizeLimit: 8Mi
        - name: run
          emptyDir:
            medium: Memory
            sizeLimit: 32Mi
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 16Mi
---
apiVersion: v1
kind: Service
metadata:
  name: lab-bootie
  namespace: lab
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: lab-bootie
  type: ClusterIP
